--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
     <marquee behavior="" direction="">Protecting the Planet, Empowering Communities</marquee>
     <div>
-        <a href="https://www.paypal.com/donate?hosted_button_id=YOUR_BUTTON_ID" class="donate-button">Donate</a>
+        <a href="https://paylink.monnify.com/natu" class="donate-button">Donate</a>
     </div>
     <section id="services">
         <div class="container">
