--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
     </section>
-    <marquee behavior="" direction="">Protecting the Planet, Empowering Communities</marquee>
+<!--     <marquee behavior="" direction="">Protecting the Planet, Empowering Communities</marquee> -->
     <div>
         <a href="https://paylink.monnify.com/natu" class="donate-button">Donate</a>
     </div>
